additional_resources/plain-k8s-manifests/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tidio-app
  labels:
    name: tidio-app
