additional_resources/plain-k8s-manifests/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-php-tidio
  labels:
    app: app-php-tidio
  namespace: tidio-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-php-tidio
  template:
    metadata:
      labels:
        app: app-php-tidio
    spec:
      serviceAccountName: app-php-tidio
      containers:
      - name: app-php-tidio
        image: php:8.2-apache
        securityContext:
          runAsNonRoot: true
          # Run with user ID 1000
          runAsUser: 1000
        # Force kubernetes to verify digest of the image with what it has cached on the node
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        # Set memory/cpu requests=limits to have stability in this aspect and cpu requests != limits to minimize perf. variability but still have some burstable capabilities
        resources:
          requests:
            memory: "256Mi"
            cpu: "300m"
          limits:
            memory: "256Mi"
            cpu: "600m"
        # Load redis connection envs vars from ConfigMap created along with other redis resources
        volumeMounts:
        # Add ability for basic php config customization through ConfigMap object
        - name: app-php-custom-config
          mountPath: /usr/local/etc/php/conf.d/app-php.ini
          subPath: app-php.ini
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
      volumes:
      - name: app-php-custom-config
        configMap:
          name: app-php-custom-config-v1
