additional_resources/plain-k8s-manifests/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-php-tidio
  name: app-php-tidio
  namespace: tidio-app
spec:
  ports:
  - port: 80
    # Default for Services but added for visibility
    protocol: TCP
    targetPort: 80
  selector:
    app: app-php-tidio
  type: ClusterIP
